Added genres class and seeded db, Also started moving albums between 2 pages

--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 
 
 body {
-  background: white url('/images/blur.jpg');
+  background: blue ;
   background-size: 100%;
   margin: 0
 }
 
 .banner {
-  background: white url('images/images.png');
+  background: white url('blur/images.png');
 
   height: 90px;
   display: flex;
