--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
 <p></p>
+<a href="/artists"><img class="mainpage" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1T7DSf_QEdhGX6pCVjoVssjsUMjsAq4a4EMIrUWBLLOOjCDlX" alt="Artists"></a>
+<a href="/albums"><img class="mainpage" src="http://applenapps.com/wp-content/uploads/2011/11/wall_sound2.jpg" alt="Albums"></a>
+<a href="/genres"><img class="mainpage" src="https://www.musicmotion.com/images/4457_l.jpg" alt="Genres"></a>
