--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,64 @@
-
-
 body {
-  background: blue ;
+  background: white url('/images/blur.jpg');
   background-size: 100%;
   margin: 0
 }
 
-.banner {
-  background: white url('blur/images.png');
+/* .banner {
+  background: white ;
+
 
   height: 90px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-}
+} */
 
 
 h1 {
-  margin-top: 25;
+  margin-top: 50;
+  color: white;
   text-align: center;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size;: 65px;
+
+}
+
+h2 {
+  text-align: center;
+}
+
+.albums {
+  border: 2px solid black;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: inherit;
+   border-collapse: inherit;
+   align-items: center;
+   margin-left: auto;
+   margin-right: auto;
+
+
+}
+
+.albums th {
+  text-align: right;
+  border: 2px solid black;
+}
+.albums td {
+  text-align: center;
+  border: 2px solid black;
+
+}
+
+.mainpage {
+
+  width: 150px;
+  height: 200px;
+  display: inline-block;
+  margin-left: 120px;
+  border: 2px solid blue;
+  -ms-align-items: center;
+  align-items: center;
 
 }
