--- a/views/albums/index.erb
+++ b/views/albums/index.erb
@@ -1,5 +1,5 @@
-<h2>This is a List of Albums</h2>
-<table>
+<h2>List of Albums</h2>
+<table class= "albums">
 <tr>
 <th>Title </th>
 <th>Band </th>
@@ -8,18 +8,13 @@
 <th>Cost Price</th>
 <th>Price </th>
 <tr/>
-
-<tr>
 <% @albums.each do |album| %>
-<td><%= album.title %><td/>
+<tr>
+<td><a href="/albums/<%= album.id %>"><%= album.title %></a></td>
 <td><%= album.find_album_artist_from_id.name %></td>
-<td><%= album.year %><td/>
+<td><%= album.year %></td>
 <td><%= album.stock_level %></td>
- <td><%= album.cost_price %></td>
-<td><%= album.price %></td>
-
-<% end %>
+ <td>£<%= album.cost_price %></td>
+<td>£<%= album.price %></td>
 </tr>
-
-
-</table>
+<% end %>
