--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,9 +11,17 @@
 
 <body>
   <div class="banner">
-    <h1>Record Planet</h1>
+    <a href = "/"><h1>Record Planet</h1></a>
 
   </div>
+  <nav>
+    <ul>
+    <li><a href="/artists">Artists</a></li>
+    <li><a href="/albums">Albums</a></li>
+    <li><a href="/genres">Genres</a>  </li>
+    <li><a href="/inventory">Inventory</a>  </li>
+    </ul>
+  </nav>
   <%= yield %>
 
 </body>
