--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  background: white url('/images/blur.jpg');
+  background: white ;
   background-size: 100%;
   margin: 0
 }
@@ -17,7 +17,7 @@ body {
 
 h1 {
   margin-top: 50;
-  color: white;
+  color: purple;
   text-align: center;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size;: 65px;
@@ -28,7 +28,7 @@ h2 {
   text-align: center;
 }
 
-.albums {
+.tables {
   border: 2px solid black;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -41,11 +41,11 @@ h2 {
 
 }
 
-.albums th {
+.tables th {
   text-align: right;
   border: 2px solid black;
 }
-.albums td {
+.tables td {
   text-align: center;
   border: 2px solid black;
 
@@ -58,7 +58,6 @@ h2 {
   display: inline-block;
   margin-left: 120px;
   border: 2px solid blue;
-  -ms-align-items: center;
   align-items: center;
 
 }
