--- a/views/genre/index.erb
+++ b/views/genre/index.erb
@@ -1,13 +1,18 @@
 <h2>List of Genres</h2>
-<table class= "albums">
+<table class= "tables">
 <tr>
 <th>Name </th>
 <th>Origin </th>
+<th>Albums: </th>
+
 
 <tr/>
 <% @genres.each do |genre| %>
 <tr>
-<td><%= genre.name %></td>
+<td><a href="/genres/<%= genre.id %>"><%= genre.name %></td>
 <td><%= genre.origin %></td>
+  <td><%= genre.find_albums_by_genre %></td>
 </tr>
 <% end %>
+<form action="/genres/new" method="get">
+  <input type="submit" value="New" />
