--- a/views/results.erb
+++ b/views/results.erb
@@ -1,1 +1,7 @@
 <p>List of search results</p>
+
+
+<p>Name: <%= @artist.name %></p>
+<p>Type: <%= @artist.type %></p>
+<p>About: <%= @artist.about %></p>
+<p><img src="<%= artist.image %>" alt="band image"></p>
