--- a/views/albums/edit.erb
+++ b/views/albums/edit.erb
@@ -2,7 +2,9 @@
 <form action="/albums/<%= @album.id %>" method="post">
 
   <label for="title">Title:</label>
-  <input type="text" id="title"  name="title" value = <%= @album.title %> name="title">>
+  <input type="text" id="title"  value ="<%= @album.title %>" name="title">
+
+
 
   <label for="artist_id">Artist:</label>
   <select id="artist_id"  name="artist_id">
