--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <p></p>
-<form class="searchbar" action="/results" method="post">
-  <input type="text" placeholder="Search.." name="search">
+<form class="searchbar" action="/results" method="get">
+  <input type="search" placeholder="Search.." name="search">
   <button type="submit"><i class="search"></i></button>
 </form>
