adding search function

--- a/views/albums/album.erb
+++ b/views/albums/album.erb
@@ -14,5 +14,5 @@
 </form>
 
 <form action="/albums/<%= @album.id %>/delete" method="post">
-<input type="submit" value="delete">
+<input class = "buttons" type="submit" value="delete">
 </form>
