--- a/views/albums/edit.erb
+++ b/views/albums/edit.erb
@@ -36,5 +36,5 @@
   <label for="image">Image-url:</label>
   <input type="text" id ="image" name="image" value = <%= @album.image %> name="image">
 
-  <input type="submit" value="Update Album">
+  <input class = "buttons" type="submit" value="Update Album">
 </form>
