--- a/views/artists/index.erb
+++ b/views/artists/index.erb
@@ -1,7 +1,7 @@
 
 
 
-<form action="/albums/new" method="get">
+<form action="/artists/new" method="get">
   <input type="submit" value="New" />
 
   <h2>List of Artists</h2>
