--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <p></p>
-<form class="searchbar" action="/results" method="get">
-  <input type="search" placeholder="Search.." name="search">
-  <button type="submit"><i class="search"></i></button>
+<form class="searchbar" action="/artists/results" method="get">
+  <input class="searchbar"type="search" id = "searchbar"name="search" placeholder="Search Artists.." >
+  <button type="submit"><i class="searchbutton" ></i></button>
 </form>
