--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,8 @@
   <div class="banner">
     <a href = "/"><h1>Record Planet</h1></a>
 
-  </div>
+
+  </div class = "sidebar" >
   <nav>
     <ul>
     <li><a href="/artists">Artists</a></li>
@@ -22,7 +23,9 @@
     <li><a href="/inventory">Inventory</a>  </li>
     </ul>
   </nav>
+<div class = "mainpagedivider" style >
+  <img class = "mainpageimage"src="/images/blur.jpg" alt="Record shop">
   <%= yield %>
-
+</div>
 </body>
 </html>
