--- a/public/style.css
+++ b/public/style.css
@@ -1,18 +1,28 @@
 body {
-  background: white ;
+  background: white;
   background-size: 100%;
   margin: 0
 }
 
-/* .banner {
-  background: white ;
+.banner {
+  background: ;
 
 
   height: 90px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
-} */
+}
+.searchbar {
+    float: inherit;
+    display: inline-block;
+
+    padding: 0px 50px 100px 500px;
+    width: 300px;
+    height: 100px;
+
+}
+
 
 
 h1 {
@@ -28,6 +38,20 @@ h2 {
   text-align: center;
 }
 
+nav {
+  padding: 0px;
+  margin: 0px;
+  padding-right: 25px;
+  font-size: 40px;
+}
+
+
+nav ul li {
+  margin-bottom: 15px;
+
+}
+
+
 .tables {
   border: 2px solid black;
   padding-top: 12px;
@@ -42,7 +66,7 @@ h2 {
 }
 
 .tables th {
-  text-align: right;
+  text-align: center;
   border: 2px solid black;
 }
 .tables td {
@@ -59,5 +83,41 @@ h2 {
   margin-left: 120px;
   border: 2px solid blue;
   align-items: center;
+}
 
+.buttons {
+  border:2px solid black;
+  border-radius: 3%;
+  padding: 8px 12px;
+  color: black;
+  align-items: center;
+}
+.albumphotos {
+  width: 150px;
+height: 200px;
+display: inline-block;
+margin-left: 120px;
+}
+
+
+.artistphotos {
+  width: 200px;
+height: 250px;
+display: inline-block;
+margin-left: 80px;
+}
+
+.mainpageimage {
+  width: 250px;
+height: 250px;
+display: inline-block;
+margin-left: 150px;
+}
+
+.mainpagedivider{
+  margin-left: 25%;
+}
+
+.sidebar {
+  width: 25% ;
 }
