--- a/views/albums/index.erb
+++ b/views/albums/index.erb
@@ -22,4 +22,4 @@
 <% end %>
 
 <form action="/albums/new" method="get">
-  <input type="submit" value="New" />
+  <input class = "buttons" type="submit" value="New" />
