--- a/views/artists/index.erb
+++ b/views/artists/index.erb
@@ -2,7 +2,7 @@
 
 
 <form action="/artists/new" method="get">
-  <input type="submit" value="New" />
+  <input class = "buttons" type="submit" value="New" />
 
   <h2>List of Artists</h2>
   <table class ="tables">
