--- a/views/genre/index.erb
+++ b/views/genre/index.erb
@@ -16,4 +16,4 @@
 </tr>
 <% end %>
 <form action="/genres/new" method="get">
-  <input type="submit" value="New" />
+  <input class ="buttons" type="submit" value="New" />
