--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 <p></p>
-<form class="searchbar" action="/artists/results" method="get">
-  <input class="searchbar"type="search" id = "searchbar"name="search" placeholder="Search Artists.." >
-  <button type="submit"><i class="searchbutton" ></i></button>
+<form class= "form"action="/artists/results" method="get">
+  <input type="search" id = "searchbar"name="search" placeholder="Search Artists.." >
+  <input class ="buttons"type="submit" value="Search">
 </form>
