--- a/views/albums/album.erb
+++ b/views/albums/album.erb
@@ -2,15 +2,15 @@
 
 <p><img class = "albumphotos" src="<%= @album.image %>" alt="album cover"></p>
 <p>Title: <%= @album.title %></p>
-<p>Band: <%= @album.find_album_artist_from_id.name%></p>
-<p>Genre: <%= @album.find_album_genre_from_id.name%></p>
+<p>Band: <a href="/artists/<%= @album.artist_id %>"><%= @album.find_album_artist_from_id.name%></a></p>
+<p>Genre:<a href="/genres/<%= @album.genre_id %>"> <%= @album.find_album_genre_from_id.name%></a></p>
 <p>Year: <%= @album.year %></p>
 <p>review: <%= @album.review %></p>
 <p>Stock Level:<%=@album.album_stock_level%></p>
 <p>Price: <%= @album.price %></p>
 
 <form action="/albums/<%= @album.id %>/update" method="get">
-<input type="submit" value="Update">
+<input class = "buttons" type="submit" value="Update">
 </form>
 
 <form action="/albums/<%= @album.id %>/delete" method="post">
