--- a/views/genre/show.erb
+++ b/views/genre/show.erb
@@ -3,6 +3,27 @@
 <p>Name: <%= @genre.name%></p>
 <p>Origin: <%= @genre.origin%></p>
 
+<table class= "tables">
+<tr>
+<th>Title </th>
+<th>Year </th>
+<th>Band name</th>
+<th>Stock Level</th>
+<th>Review</th>
+<th>Price </th>
+<tr/>
+<% @albums.each do |album| %>
+<tr>
+<td><a href="/albums/<%= album.id %>"><%= album.title %></a></td>
+<td><%= album.year %></td>
+<td><a href="/artists/<%= album.artist_id %>"><%= album.find_album_artist_from_id.name %></a></td>
+<td><%= album.album_stock_level %></td>
+ <td><%= album.review %></td>
+<td>£<%= album.price %></td>
+</tr>
+<% end %>
+
+
 <form action="/genres/<%= @genre.id %>/edit" method="get">
 <input type="submit" value="Update">
 </form>
