--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,6 +27,7 @@
     <li><a href="/albums">Albums</a></li>
     <li><a href="/genres">Genres</a>  </li>
     <li><a href="/inventory">Inventory</a>  </li>
+    <li><a href="/sale">Till</a>  </li>
     </ul>
   </nav>
  </div>
