--- a/views/shop/index.erb
+++ b/views/shop/index.erb
@@ -13,12 +13,12 @@
 <td><a href="/albums/<%= album.id %>"><%= album.title %></a></td>
 <td><a href="/artists/<%= album.artist_id %>"><%= album.find_album_artist_from_id.name %></a></td>
 <td>£<%= album.price %></td>
-<td><form action="/sale/buy/<%= album.id %>" method="post"><input type="submit" value ="Buy"></td>
+<td><form action="/sale/buy/<%= album.id %>" method="post"><input type="submit" value ="Buy"></form></td>
 
 </tr>
 <% end %>
 
-</form>
+
 <table class = "tables">
   <tr>
     <th>Till</th>
