--- a/views/albums/new.erb
+++ b/views/albums/new.erb
@@ -33,6 +33,12 @@
     <% end %>
   </select>
 
+  <select id="shop_id"  name="shop_id">
+
+    <option value="<%= @shop.id%>"><%= @shop.name%></option>
+
+  </select>
+
   <label for="image">Image-url:</label>
   <input type="text" id ="image" name="image">
 
