--- a/views/genre/edit.erb
+++ b/views/genre/edit.erb
@@ -2,9 +2,11 @@
 <form action="/genres/<%= @genre.id %>" method="post">
 
   <label for="name">Name:</label>
-  <input type="text" id="name" value = <%= @genre.name %> name="name">
+  <input type="text" id="name" value = "<%= @genre.name %>" name="name">
 
   <label for="origin">Origin:</label>
-  <input type="text" id="origin" value = <%= @genre.origin%> name="origin">
+  <input type="text" id="origin" value = "<%= @genre.origin %>" name="origin">
+
+  <input class = "buttons" type="submit" value="Update">
 
 </form>
