--- a/views/albums/edit.erb
+++ b/views/albums/edit.erb
@@ -1,42 +1,57 @@
 <h2>Update Album</h2>
-<form action="/albums/<%= @album.id %>" method="post">
-
+<form class = "albumedit" action="/albums/<%= @album.id %>" method="post">
+  <div>
   <label for="title">Title:</label>
   <input type="text" id="title"  value ="<%= @album.title %>" name="title">
+  </div>
 
-
-
+  <div>
   <label for="artist_id">Artist:</label>
   <select id="artist_id"  name="artist_id">
     <% @artists.each do |artist| %>
       <option value="<%= artist.id%>" <%= @album.artist_id == artist.id ? "selected" : "" %> ><%= artist.name %></option>
     <% end %>
   </select>
+  </div>
 
+  <div>
   <label for="year">Year:</label>
   <input type="text"  id ="year" name="year" value = <%= @album.year %> name="year">
+  </div>
 
+  <div>
   <label for="review">Review:</label>
   <input type="text"  id ="review" name="review" value = <%= @album.review %> name="review">
+  </div>
 
+  <div>
   <label for="stock_lever">Stock Level:</label>
   <input type="number"  id ="stock_level" name="stock_level"value = <%= @album.stock_level %> name="stock_level">
+  </div>
 
+  <div>
   <label for="cost_price">Cost Price:</label>
   <input type="number"  id ="cost_price" name="cost_price" value = <%= @album.cost_price %> name="cost_price">
+  </div>
 
+  <div>
   <label for="price">Price:</label>
   <input type="number"  id ="price" name="price" value = <%= @album.price %> name="price">
+  </div>
 
+  <div>
   <label for="genre_id">Genre:</label>
   <select id="genre_id"  name="genre_id">
     <% @genres.each do |genre| %>
     <option value="<%= genre.id %>" <%= "selected" if @album.genre_id == genre.id %>><%=genre.name%></option>
   <% end %>
-</select>
+  </select>
+  </div>
 
+  <div>
   <label for="image">Image-url:</label>
   <input type="text" id ="image" name="image" value = <%= @album.image %> name="image">
-
   <input class = "buttons" type="submit" value="Update Album">
+  </div>
+  
 </form>
