--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,31 @@
 body {
   background: white;
   background-size: 100%;
-  margin: 0
+  margin: 0;
+  font-family: 'Spectral SC', serif;
 }
 
+
 .banner {
-  background: ;
-
-
+  background-color: #708090;
   height: 90px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  font-family: 'Spectral', serif;
+
 }
+
+.logo {
+  text-decoration: none;
+  color: #ffffff;
+}
+
 #searchbar {
   width: 600px;
   height: 35px;
   border:0.5px solid black;
-
+  margin-left: 250px;
 
 }
 
@@ -31,53 +39,62 @@ body {
 
 h1 {
   margin-top: 50;
-  color: purple;
+  color: black;
   text-align: center;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   font-size;: 65px;
-
 }
 
 h2 {
   text-align: center;
 }
 
-nav {
-  padding: 0px;
-  margin: 0px;
-  padding-right: 25px;
-  font-size: 40px;
+header{
+  margin: 0;
+  background-color: #708090;
+  font-family: 'Spectral', serif;
 }
 
-
-nav ul li {
-  margin-bottom: 15px;
-  display: inline;
-
-}
-
-
-.tables {
-  border: 2px solid black;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: inherit;
-   border-collapse: inherit;
-   align-items: center;
-   margin-left: auto;
-   margin-right: auto;
-}
-
-.tables th {
+.nav-list {
+  margin: 0;
+  color: black;
+  list-style: none;
   text-align: center;
-  border: 2px solid black;
-}
-.tables td {
-  text-align: center;
-  border: 2px solid black;
-
+  padding: 20px 0 20px 0;
 }
 
+.nav-list > li{
+  display: inline-block;
+  padding: 0 25px 0 25px;
+  font-size: 30px;
+}
+
+.nav-list > li >a{
+  text-decoration: none;
+  color: black;
+}
+
+.nav-list > li > a:hover{
+  color:#8B0000
+}
+
+table {
+  margin: 0 auto;
+	width: 800px;
+	border-collapse: collapse;
+	overflow: hidden;
+	box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
+th,
+td {
+	padding: 15px;
+	color: black;
+  text-shadow: 1px  black;
+}
+
+th {
+	text-align: left;
+}
 .mainpage {
 
   width: 150px;
