--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
-<p></p>
+<div>
 <form class= "form"action="/artists/results" method="get">
   <input type="search" id = "searchbar"name="search" placeholder="Search Artists.." >
   <input class ="buttons"type="submit" value="Search">
 </form>
+</div>
