--- a/views/genre/show.erb
+++ b/views/genre/show.erb
@@ -1,7 +1,7 @@
-<h2>Genre</h2>
+<h1>Genre</h1>
 
-<p>Name: <%= @genre.name%></p>
-<p>Origin: <%= @genre.origin%></p>
+<h2>Name: <%= @genre.name%></h2>
+<h2>Origin: <%= @genre.origin%></h2>
 
 <table class= "tables">
 <tr>
