--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,10 @@
-<div>
+<div id ="search-div">
 <form class= "form"action="/artists/results" method="get">
-  <input type="search" id = "searchbar"name="search" placeholder="Search Artists.." >
+  <input type="search" id="searchbar"name="search" placeholder="Search Artists.." >
   <input class ="buttons"type="submit" value="Search">
 </form>
+</div>
+
+<div id="new-image" >
+
 </div>
