--- a/views/artists/index.erb
+++ b/views/artists/index.erb
@@ -16,8 +16,11 @@
   <tr>
   <td><a href="/artists/<%= artist.id %>"><%= artist.name %></a></td>
   <td><%= artist.type %></td>
-  <% artist.find_albums_by_artists.each do |album| %>
-  <td><a href="/albums/<%= album.id %>"><%= album.title%><% end %></td>
-
+  <td>
+  <select>
+    <% artist.find_albums_by_artists.each do |album| %>
+    <option><%= album.title%><% end %></option>
+  </select>
+  </td>
   </tr>
   <% end %>
